--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -5,3 +5,29 @@
 }
 
 /* Start coding here */
+:root{
+  --Brading-Color: #ff7f50;
+  --Secondary-Color: cornsilk;
+  --Highlight-Color: #d2691e;
+  --Muted-Color: #a9a9a9;
+  --Level1: 1px;
+  --Level2: 5px;
+  --Level3: 10px;
+  --Level4: 15px;
+  --Level5: 20px;
+  --Small: 12px;
+  --Medium: 16px;
+  --Large: 20px;
+  --Extra-Large: 30px;
+  --Double-Extra-Large: 50px;
+  --Triple-Extra-Large: 100px;
+}
+
+.introduction{
+  background-color: var(--Secondary-Color);
+  padding: var(--Level5);
+}
+.introduction h1 {
+  color: var(--Brading-Color);
+  font-size: var(--Triple-Extra-Large);
+}
